			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05a: *********************************

IMP: (9/22/06, GVG) Not printing NotInUsed nodes in Document Current Technology".

BUG: (9/22/06, DN) AlphaBlender crashes on narrow images.
FIX: In AlphaBlender.composeLine add return when minInt == maxInt.

IMP: (9/22/06, SMR) Node type in Node Preferences is now selectable (Bug #1218).

BUG: (9/22/06, SMR) "Document Current Technology" crashes.
FIX: In Manipulate.describeTechnology(), remove the lines:
		ai.setExtended(ArcInst.HEADEND, false);
		ai.setExtended(ArcInst.TAILEND, false);
     and change:
		double area = poly.getArea() / ai.getLength();
     to:
		Rectangle2D bounds = poly.getBounds2D();
		double area = Math.min(bounds.getWidth(), bounds.getHeight());

IMP: (9/22/06, GVG) Detecting if zero length arc is covered by other polygon of the same layer and
avoid DRC warning (Bug#1174). Regression data updated.

IMP: (9/22/06, GVG) default M4 arc width = 3(old=4) and M6 arc width = 5(old=4).

IMP/MAN: (9/22/06, SMR) Added control for legacy blending.

BUG: (9/22/06, DN) Drawing in the TechPalette doesn't match the actual primitives in the EditWindow (Bug #1213).
FIX: TechPalette.drawShapes uses either VectorDrawing or LayerDrawing depending on preferences.

IMP: (9/21/06, SMR) Added copyright notices.

BUG: (9/21/06, GVG) Null Exception in Color Pattern dialog after unselecting highlighted object (Bug#1230).
FIX: PatternView.Info is null if you unselect an object and leaving the ColorPattern dialog open.

IMP: (9/21/06, SMR) Made "Describe This Technology" more readable.

IMP/MAN: (9/21/06, SMR) Removed text input field from bottom of messages window.

IMP: (9/21/06, SMR) Using Math.hypot() where appropriate.

BUG: (9/21/06, SMR) Default arc end-extension not always used.
FIX: In VerticalRoute.buildRoute(), use proper extension in calls to RouteElementArc.newArc().