@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.05a: *********************************
 
+IMP: (9/25/06, GVG) Reporting number of layer instances whose geometries are identical in Document Current Technology.
+Using DocColumn class to handle the printing on standard output.
+
 IMP: (9/22/06, GVG) Not printing NotInUsed nodes in Document Current Technology".
 
 BUG: (9/22/06, DN) AlphaBlender crashes on narrow images.
